# nlp

./: .gitignore  README.md  pyproject.toml  requirements.txt
Practical_00/: 00 - Introduction to Jupyter Notebooks.ipynb
Practical_00/python/: Python Introduction and Recap.ipynb
Practical_01/: 01 - Introduction to Python and Text Data.ipynb
Practical_01/docs/: Alice_Chapter1.txt
Practical_02/: 02 - Building a Text Classifier.ipynb
Practical_03/: 03 - Interacting with Document Search Engines.ipynb
Practical_04/: 04 - Text Clustering.ipynb
Practical_05/: 05 - Word Embeddings.ipynb
Practical_06/: 06 - Sequence Labelling and Classification.ipynb
Practical_06/spacy_model/vocab/: strings.json
Practical_07/: 07 - Transformer-based Text Classification.ipynb
Practical_07/cool_trainer_name/runs/May20_13-44-49_HAL9001.lan/: events.out.tfevents.1684586856.HAL9001.lan.21745.2
Practical_08/: 08 - Semantic Search.ipynb
Practical_09/: 09 - Generative Models.ipynb  link.txt
Practical_10/: NLP_Speech.ipynb
