[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "bs4>=0.0.2",
    "datasets>=2.14.4",
    "eli5>=0.13.0",
    "fasttext-wheel>=0.9.2",
    "hnswlib>=0.8.0",
    "ipykernel>=6.29.5",
    "ktrain>=0.41.4",
    "lxml>=5.3.1",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "parlai>=1.2.0",
    "plac>=1.4.3",
    "plotly>=6.0.0",
    "pybind11>=2.13.6",
    "python-terrier>=0.13.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.1.1",
    "sentencepiece>=0.2.0",
    "spacy>=3.8.4",
    "stanza>=1.10.1",
    "tabula-py>=2.10.0",
    "tensorflow>=2.14.0",
    "torch>=2.6.0",
    "transformers>=4.48.0",
]
